# spectraplex

./: .gitignore  Cargo.toml  README.md
adapters/: Cargo.toml
adapters/src/: lib.rs  repo.rs  solana.rs  solana_grpc.rs  solana_parser.rs
adapters/tests/: solana_parser_test.rs
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: models.rs
migrations/: 20251219000000_init.sql  20251219010000_add_wallet_to_ledger.sql
