[package]
name = "spectraplex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
spectraplex-core = { path = "../core" }
spectraplex-adapters = { path = "../adapters" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "bigdecimal"] }
dotenv = "0.15"
anyhow = "1.0"
