[package]
name = "spectraplex-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
spectraplex-core = { path = "../core" }
spectraplex-adapters = { path = "../adapters" }
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "json"] }
